fixing issues uncovered by webpack5...

--- a/src/smc-webapp/_bootstrap.sass
+++ b/src/smc-webapp/_bootstrap.sass
@@ -17,7 +17,7 @@
 
 
 .smc-toggle-show
-  border-bottom : 1px solid grey;
+  border-bottom : 1px solid grey
 
 #cocalc-idle-notification
   z-index    : 9999
