--- a/src/smc-webapp/_jsoninspector.sass
+++ b/src/smc-webapp/_jsoninspector.sass
@@ -4,7 +4,7 @@
  */
 
 .json-inspector__selection:focus
-    opacity: 1;
+    opacity: 1
 
 .json-inspector, .json-inspector__selection
   font-family: Consolas, monospace
