--- a/src/smc-webapp/_jupyter.sass
+++ b/src/smc-webapp/_jupyter.sass
@@ -106,4 +106,4 @@
     margin: 1em .5em // margin works as well, but we also have to set it for mathjax to make it look consistent
 
   .MathJax_SVG_Display
-    padding-right: 1em;
+    padding-right: 1em
