--- a/src/smc-webapp/index.sass
+++ b/src/smc-webapp/index.sass
@@ -406,16 +406,16 @@ div.cocalc-xtermjs > div.terminal.xterm > div.xterm-viewport
     opacity  : .7
 
 .dropdown-splitbutton-left>div>ul.dropdown-menu
-  right: 0;
-  left: auto;
-  padding-left: 1px;
-  padding-right: 1px;
+  right: 0
+  left: auto
+  padding-left: 1px
+  padding-right: 1px
 
 @import antd_fix
 
 // Fix issue https://github.com/sagemathinc/cocalc/issues/4568
 blockquote
-  font-size: inherit;
+  font-size: inherit
 blockquote p
-  font-size: inherit;
+  font-size: inherit
 
