--- a/src/smc-webapp/notifications/_style.sass
+++ b/src/smc-webapp/notifications/_style.sass
@@ -5,19 +5,19 @@
 
 .smc-notificationlist
   ul
-    margin: 0px;
-    padding: 0px;
+    margin: 0px
+    padding: 0px
 
   li
-    border-bottom: 1px solid rgb(221, 221, 221);
-    cursor: pointer;
-    flex: 1 1 0%;
-    display: flex;
-    padding: 6px 12px 5px 0px;
-    list-style: none;
+    border-bottom: 1px solid rgb(221, 221, 221)
+    cursor: pointer
+    flex: 1 1 0%
+    display: flex
+    padding: 6px 12px 5px 0px
+    list-style: none
 
   li:last-child
-    border-bottom: 0px;
+    border-bottom: 0px
 
   .panel-body
-    padding: 0px;
+    padding: 0px
